testing/Travis/testcases/prototype/shouldSucceed/Issue142.adl
CONTEXT Issue142 IN DUTCH
INCLUDE "Issue142.xlsx"
--   CLASSIFY Box ISA Thing
   CLASSIFY Application ISA Box
   RELATION boxDoc[Box*Documentation][UNI,TOT]
ENDCONTEXT